--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,6 +10,7 @@
 .main-body
 {
     background-color: #B0A27B;
+    width: 100%;
 }
 
 .main-navigation-btns-fontstyle
@@ -331,8 +332,8 @@
 	background: #FFFFFF;
 	/* margin: 50px auto; */
 	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
-	-moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
-	-webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
+	/* -moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+	-webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22); */
 }
 .agency-show-btn
 {
@@ -429,9 +430,6 @@
     margin-top: -55px; 
 } */
 #grid-container-div-one {margin-left: 30%;}
-/* #grid-container-div-two {margin-left: 5%;}
-#grid-container-div-three {margin-left: 3%;}
-#grid-container-div-four {margin-left: 1%;} */
 
 .navi-links-btns  {margin-top: -10px; height: 40px; text-decoration: none; display: block;}
 .navi-links-btns:hover {color:blue; border-bottom : 5px solid blue; }
@@ -544,7 +542,7 @@ padding: 12px 12px 12px 12px;
 {
     color:blue;
     
-    display:inline-flexbox;
+    /* display:inline-flexbox; */
 	
     padding:5px 5px;
     /* font-size: 16px;
@@ -589,7 +587,7 @@ padding: 12px 12px 12px 12px;
 {
     width: 65px;
     height: 55px;
-    margin-top: -5px; 
+    margin-top: -9px; 
     margin-right: 5%;
 }
 
