New Bake4me client Staff Admin Server Uploads

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -30,6 +30,13 @@
 }
 .main-navigation-btns  {background-color:#B8860B;}
 
+.menu-iframe
+{
+    width:50%;
+    height: 50%;
+    /* margin-top: -2px; */
+    /* align-content: center; */
+}
 /*=======================================================================================================*/
                                             /*
                                                ++++++++++++++++++++++++
