--- a/static/css/main.css
+++ b/static/css/main.css
@@ -33,9 +33,91 @@
 .menu-iframe
 {
     width:50%;
-    height: 50%;
+    height: 500px;
     /* margin-top: -2px; */
     /* align-content: center; */
+}
+.amount-pay-label
+{
+	 font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 18px;
+
+    color: white;
+}
+
+/*=======================================================================================================*/
+                                            /*
+                                               ++++++++++++++++++++++++
+                                               +                       +
+                                               +     CLIENT SIDE       +
+                                               +                       +
+                                               +++++++++++++++++++++++++
+                                               */
+/* The container */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 20px;
+  margin-bottom: 12px;
+  background:#B0A27B;
+  cursor: pointer;
+  font-size: 18px;
+  user-select: none;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 /*=======================================================================================================*/
                                             /*
@@ -102,6 +184,7 @@
 .login-btn  {background-color:#B8860B;}
 .logout-btn {background-color:#B8860B;}
 .register-btn {background-color:#B8860B;}
+
 /*=======================================================================================================*/
                                             /*
                                                +++++++++++++++++++++++++ ++
@@ -154,6 +237,17 @@
     grid-gap: 0px;
     padding: 8px;
     /* margin-top: -55px;  */
+}
+.client-view-feedbacks
+{
+    font-family: 'Open Sans Condensed', arial, sans;
+	width: 50%;
+	padding: 30px;
+	background: #FFFFFF;
+	
+	border-bottom-left-radius:30px;
+	border-bottom-right-radius:30px;
+	
 }
 
 /*=======================================================================================================*/
