--- a/static/css/main.css
+++ b/static/css/main.css
@@ -44,7 +44,7 @@
 
     color: white;
 }
-
+.small-span{display:none;}
 /*=======================================================================================================*/
                                             /*
                                                ++++++++++++++++++++++++
