--- a/static/css/mediarules.css
+++ b/static/css/mediarules.css
@@ -5,8 +5,13 @@
 /* Extra small devices (phones, 600px and down) */
 @media only  screen and (max-width: 600px) 
 {
-.small-span{display:block;}
-.large-span {display:none;}
+#small-span{display:block;}
+#large-span {display:none;}
+
+.client-view-feedbacks
+{
+	width: 100%;
+}
 .pay-webp-img,.feedback-webp-img,.arrival-webp-img
 {
     width: 20px;
@@ -18,13 +23,13 @@
 .archive-webp-img
 {
     width: 20px;
-    height: 20px;
+    height: 30px;
     margin-bottom: 22px;
     margin-top: 5px;
     margin-left: 2%;
     
 }
-#NaviDivHeader {background-color: red;height:43px;}
+#NaviDivHeader {background-color: red;height:48px;}
 
 .profile-svg-img 
 {
