--- a/static/css/main.css
+++ b/static/css/main.css
@@ -263,8 +263,10 @@
 .calender-card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 40%;
+  width: 100%;
   border-radius: 5px;
+  margin-left:20px;
+  margin-right:20px;
   background-color:white;
   border-bottom-left-radius:50px;
   border-bottom-right-radius:50px;
