--- a/static/css/main.css
+++ b/static/css/main.css
@@ -44,7 +44,57 @@
 
     color: white;
 }
-
+#bottom-btn-div-id
+{
+	margin: 0;
+	  position: absolute;
+	  top: 95%;
+	  left: 35%;
+	  right:50%;
+	  width:30%;
+}
+.assign-btn
+{
+    background-color:#8366f4;
+    color: white;
+    font-weight: bold;
+    border:none;
+    margin-left: -6%;
+	
+    width:100%;
+    height:40px;
+    border-radius:18px;
+}
+#staff-work-on-div
+{
+	width:100%;
+    
+	border-bottom-left-radius:50px;
+	border-bottom-right-radius:50px;
+}
+.client-view-feedbacks
+{
+    font-family: 'Open Sans Condensed', arial, sans;
+	width:100%;
+	padding: 30px;
+   
+	background: #FFFFFF;
+	
+	border-bottom-left-radius:30px;
+	border-bottom-right-radius:30px;
+	
+}
+.admin-btn
+{
+    background-color:#8a85ff;
+    color: white;
+    font-weight: bold;
+    border:none;
+    width:100%;
+    height:40px;
+    border-radius:10px;
+	
+}
 /*=======================================================================================================*/
                                             /*
                                                ++++++++++++++++++++++++
@@ -238,19 +288,7 @@
     padding: 8px;
     /* margin-top: -55px;  */
 }
-.client-view-feedbacks
-{
-    font-family: 'Open Sans Condensed', arial, sans;
-	width: 85%;
-	padding: 30px;
-    margin-left: 50%;
-    margin-right: 50%;
-	background: #FFFFFF;
-	
-	border-bottom-left-radius:30px;
-	border-bottom-right-radius:30px;
-	
-}
+
 
 .down-load-btn
 {
@@ -307,15 +345,7 @@
     font-family:Times New Roman Times, serif;
 }
 
-.staff-work-on-div
-{
-	background-color:inherit;
-	width:50%;
-    
-	border-bottom-left-radius:50px;
-	border-bottom-right-radius:50px;
-    /* background-color: yellowgreen; */
-}
+
 .orders-status-td{text-align: center;}
 .orders-avenue-td
 {
@@ -349,17 +379,7 @@
 
 }
 .form_input:focus {border-bottom: 2px solid black;}
-.assign-btn
-{
-    background-color:#8366f4;
-    color: white;
-    font-weight: bold;
-    border:none;
-    margin-left: -6%;
-    width:25%;
-    height:40px;
-    border-radius:18px;
-}
+
 .submit-btn
 {
     background-color:blue;
@@ -369,19 +389,7 @@
     border-radius:18px;
     color: white;
 }
-.admin-btn
-{
-    background-color:#8a85ff;
-    color: white;
-    font-weight: bold;
-    border:none;
-    margin-left: 50%;
-    margin-right: 50%;
-    width:85%;
-    height:40px;
-    border-radius:10px;
-	
-}
+
 .staff-popup-price-estiments
 {
     background-color: rgb(209, 78, 30);
@@ -475,7 +483,7 @@
 .orders_from_to_form
 {
     font-family: 'Open Sans Condensed', arial, sans;
-	width: 40%;
+	width: 100%;
 	padding: 30px;
 	background: #FFFFFF;
 	
