--- a/static/css/main.css
+++ b/static/css/main.css
@@ -245,16 +245,16 @@
                                                */
 
 
-/* #school-login-div-id {} */
-.pay-svg
+#school-login-div-id 
 {
-    /* color: blue; */
-    fill: red;
-}
+	width:100%;
+	
+} 
+
 #school-register-div-id { display: none;}
 .login-form
 {
-    width: 20%;
+    width: 100%;
     background-color: white;
 }
 .regester-form-labels
@@ -305,8 +305,7 @@
   transition: 0.3s;
   width: 100%;
   border-radius: 5px;
-  margin-left:20px;
-  margin-right:20px;
+  
   background-color:white;
   border-bottom-left-radius:50px;
   border-bottom-right-radius:50px;
@@ -667,7 +666,7 @@ padding: 12px 12px 12px 12px;
     text-align: center;
 }
 
-#NaviDivHeader {background-color: #D8C8A0;height:62px; width: 100%;}
+#NaviDivHeader {background-color: #D8C8A0;height:60px; width: 100%;}
 .open-navigation-label
 {
     font-size:35px;
