--- a/static/css/main.css
+++ b/static/css/main.css
@@ -47,8 +47,8 @@
 #bottom-btn-div-id
 {
 	margin: 0;
-	  position: absolute;
-	  top: 95%;
+	
+	  top: 0%;
 	  left: 35%;
 	  right:50%;
 	  width:30%;
@@ -95,13 +95,24 @@
     border-radius:10px;
 	
 }
+#results-table-display-id
+{
+	width:100%;
+	background-color:red;
+}
 /* begin  table css */
 .user-scrolling-table
 {
-    display:block;
+	/*
+  display:block;
     overflow: auto;
     height: 350px;
     width: 100%;
+	*/
+	 width: 100%;
+	height:50px;
+    background-color: #6666ff;
+	overflow: auto;
 }
 .js_table_headers
 {
@@ -130,7 +141,9 @@
 .status-table
 {
     width: 100%;
+	height:50px;
     background-color: #6666ff;
+	overflow: auto;
 }
 .status-table-tr:hover
 {
@@ -139,8 +152,8 @@
 }
 .status-table-td
 {
-    margin-left: 200px;
     font-size: 15px;
+	padding-left:10px;
     font-weight:bold;
     color:#E6E6FA;
     font-family:Times New Roman Times, serif;
