--- a/static/css/main.css
+++ b/static/css/main.css
@@ -103,7 +103,7 @@
 /* begin  table css */
 .user-scrolling-table
 {
-	display:;
+	display:block;
 	width: 100%;
 	
     background-color: #6666ff;
@@ -139,6 +139,7 @@
 	height:50px;
     background-color: #6666ff;
 	overflow: auto;
+	
 }
 .status-table-tr:hover
 {
